--- a/PINNs for harmonic oscillators.ipynb
+++ b/PINNs for harmonic oscillators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "edd42976",
+   "id": "f718facc",
    "metadata": {},
    "source": [
     "## PINNs - Physics-Informed Neural Networks for harmonic oscillators\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ac05b98",
+   "id": "7267d833",
    "metadata": {},
    "source": [
     "### Underdamped case\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4fcbd54a",
+   "id": "1bf3380b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e5ddd93d",
+   "id": "dfdfcccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8dbc11c",
+   "id": "e1d012e0",
    "metadata": {},
    "source": [
     "Let's start by generating the data:"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "00937224",
+   "id": "2d5eec5f",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2be6424",
+   "id": "364c5a00",
    "metadata": {},
    "source": [
     "#### Vanilla FCN\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4b4652dd",
+   "id": "b42e2a4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8710ded",
+   "id": "67f22f28",
    "metadata": {},
    "source": [
     "![SegmentLocal](nn_ud.gif \"gif\")"
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e166b8d0",
+   "id": "2ee3e73e",
    "metadata": {},
    "source": [
     "Due to the fact that the training sample represents only a limited region of the full domain, the network is unable to capture the behavior of the system outside that limited region."
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b3efb7e",
+   "id": "4bdf520d",
    "metadata": {},
    "source": [
     "#### PINN\n",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "509be9b1",
+   "id": "bcf32f4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9bab1df2",
+   "id": "225a863b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "369a00af",
+   "id": "1342a13e",
    "metadata": {},
    "source": [
     "![SegmentLocal](pinn_ud.gif \"gif\")"
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "408325e1",
+   "id": "35edf5ab",
    "metadata": {},
    "source": [
     "We can see that the PINN aims to ensure that our solution fits well over the full domain, and not only the limited region that the available data might represent."
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "47714e2d",
+   "id": "352c10ad",
    "metadata": {
     "scrolled": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e274be7",
+   "id": "43d353fc",
    "metadata": {},
    "source": [
     "### Critically damped case\n",
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "562b78e7",
+   "id": "b9f3bbbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e073f7b",
+   "id": "03bf4f77",
    "metadata": {},
    "source": [
     "Let's start by generating the data:"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "13b5d5d9",
+   "id": "9830d060",
    "metadata": {
     "scrolled": true
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "266b8c3a",
+   "id": "8f4a6d31",
    "metadata": {},
    "source": [
     "#### FCN\n",
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "8a6bf1c2",
+   "id": "f3a87162",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c1be4f1",
+   "id": "080e461d",
    "metadata": {},
    "source": [
     "![SegmentLocal](nn_cd.gif \"gif\")"
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbf64aee",
+   "id": "50256433",
    "metadata": {},
    "source": [
     "#### PINN\n",
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "452eec0d",
+   "id": "923527c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "3916ecad",
+   "id": "97b1bcee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,15 +667,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "955a9bb4",
+   "id": "a1310f62",
    "metadata": {},
    "source": [
-    "![SegmentLocal](pinn_cd13.gif \"gif\")"
+    "![SegmentLocal](pinn_cd.gif \"gif\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f0aa84b",
+   "id": "03119975",
    "metadata": {},
    "source": [
     "### Overdamped case\n",
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "9fea0f5d",
+   "id": "7d8a1534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c17d41a",
+   "id": "a70ec1f8",
    "metadata": {},
    "source": [
     "Let's start by generating the data - Note that the critically damped and overdamped cases can be easily fitted with non-physics-informed NNs, therefore for this example we select a particularly limited range to be represented with the training data, so that we see the effect of the physics loss in action."
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "0e0a45b5",
+   "id": "55760ca8",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15b204be",
+   "id": "e812655b",
    "metadata": {},
    "source": [
     "#### FCN\n",
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "8deaab2d",
+   "id": "98b74f4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "584e6f3b",
+   "id": "3ef2e745",
    "metadata": {},
    "source": [
     "![SegmentLocal](nn_od.gif \"gif\")"
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82e85ded",
+   "id": "a74753bf",
    "metadata": {},
    "source": [
     "#### PINN\n",
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0d440c8a",
+   "id": "e3d74a37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "54343b47",
+   "id": "5b0d564c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4d9b794",
+   "id": "f12cf4cf",
    "metadata": {},
    "source": [
     "![SegmentLocal](pinn_od1.gif \"gif\")"
