--- a/PINNs for harmonic oscillators.ipynb
+++ b/PINNs for harmonic oscillators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f718facc",
+   "id": "0e16d484",
    "metadata": {},
    "source": [
     "## PINNs - Physics-Informed Neural Networks for harmonic oscillators\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7267d833",
+   "id": "eab3df23",
    "metadata": {},
    "source": [
     "### Underdamped case\n",
@@ -69,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1bf3380b",
+   "execution_count": 1,
+   "id": "bd23f52c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dfdfcccd",
+   "execution_count": 2,
+   "id": "69202ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1d012e0",
+   "id": "51afe369",
    "metadata": {},
    "source": [
     "Let's start by generating the data:"
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2d5eec5f",
+   "id": "cbd89dc7",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364c5a00",
+   "id": "5e5f956b",
    "metadata": {},
    "source": [
     "#### Vanilla FCN\n",
@@ -206,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b42e2a4c",
+   "execution_count": 4,
+   "id": "d6ef3e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,20 +243,20 @@
     "        \n",
     "        plt.close(\"all\")    \n",
     "            \n",
-    "save_gif_PIL(\"nn_ud.gif\", files, fps=20, loop=0) # save gif"
+    "save_gif_PIL(\"ud_nn.gif\", files, fps=20, loop=0) # save gif"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "67f22f28",
+   "id": "42b375fe",
    "metadata": {},
    "source": [
-    "![SegmentLocal](nn_ud.gif \"gif\")"
+    "![SegmentLocal](ud_nn.gif \"gif\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2ee3e73e",
+   "id": "213c5888",
    "metadata": {},
    "source": [
     "Due to the fact that the training sample represents only a limited region of the full domain, the network is unable to capture the behavior of the system outside that limited region."
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bdf520d",
+   "id": "d4c09359",
    "metadata": {},
    "source": [
     "#### PINN\n",
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "bcf32f4b",
+   "execution_count": 5,
+   "id": "8a151c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,8 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "225a863b",
+   "execution_count": 6,
+   "id": "41a57554",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,20 +347,20 @@
     "        #else: plt.close(\"all\")\n",
     "        plt.close(\"all\")\n",
     "            \n",
-    "save_gif_PIL(\"pinn_ud.gif\", files, fps=20, loop=0)"
+    "save_gif_PIL(\"ud_pinn.gif\", files, fps=20, loop=0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1342a13e",
+   "id": "226eda0e",
    "metadata": {},
    "source": [
-    "![SegmentLocal](pinn_ud.gif \"gif\")"
+    "![SegmentLocal](ud_pinn.gif \"gif\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "35edf5ab",
+   "id": "2a138382",
    "metadata": {},
    "source": [
     "We can see that the PINN aims to ensure that our solution fits well over the full domain, and not only the limited region that the available data might represent."
@@ -368,8 +368,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "352c10ad",
+   "execution_count": 7,
+   "id": "59274792",
    "metadata": {
     "scrolled": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43d353fc",
+   "id": "cc762fe4",
    "metadata": {},
    "source": [
     "### Critically damped case\n",
@@ -429,8 +429,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "b9f3bbbf",
+   "execution_count": 8,
+   "id": "3e6931ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bf4f77",
+   "id": "71ffcbd4",
    "metadata": {},
    "source": [
     "Let's start by generating the data:"
@@ -475,8 +475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "9830d060",
+   "execution_count": 9,
+   "id": "9dda5529",
    "metadata": {
     "scrolled": true
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f4a6d31",
+   "id": "a3c72f7e",
    "metadata": {},
    "source": [
     "#### FCN\n",
@@ -531,15 +531,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "f3a87162",
+   "execution_count": 10,
+   "id": "f5d5afb0",
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.manual_seed(123)\n",
-    "model = FCN(1,1,32,3) # (n_in, n_out, n_hidden, n_layers)\n",
-    "optimizer = torch.optim.Adam(model.parameters(),lr=1e-3)\n",
-    "epochs = range(1, 501)\n",
+    "model = FCN(1,1,18,3) # (n_in, n_out, n_hidden, n_layers)\n",
+    "optimizer = torch.optim.Adam(model.parameters(),lr=5e-3)\n",
+    "epochs = range(1, 801)\n",
     "losses = []\n",
     "files = []\n",
     "\n",
@@ -567,20 +567,20 @@
     "        #else: plt.close(\"all\")\n",
     "        plt.close(\"all\")    \n",
     "            \n",
-    "save_gif_PIL(\"nn_cd.gif\", files, fps=20, loop=0)"
+    "save_gif_PIL(\"cd_nn.gif\", files, fps=20, loop=0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "080e461d",
+   "id": "2fa84736",
    "metadata": {},
    "source": [
-    "![SegmentLocal](nn_cd.gif \"gif\")"
+    "![SegmentLocal](cd_nn.gif \"gif\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "50256433",
+   "id": "b1af8047",
    "metadata": {},
    "source": [
     "#### PINN\n",
@@ -589,8 +589,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "923527c5",
+   "execution_count": 11,
+   "id": "97e8c1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,8 +600,8 @@
     "mu, k = 2*d, w0**2\n",
     "\n",
     "torch.manual_seed(123)\n",
-    "model = FCN(1,1,32,3)\n",
-    "epochs = range(1, 40001)\n",
+    "model = FCN(1,1,15,3)\n",
+    "epochs = range(1, 20001)\n",
     "losses = []\n",
     "losses_data = []\n",
     "losses_physics = []\n",
@@ -611,8 +611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "97b1bcee",
+   "execution_count": 12,
+   "id": "1bdf5eff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,20 +662,20 @@
     "        #else: plt.close(\"all\")\n",
     "        plt.close(\"all\")\n",
     "            \n",
-    "save_gif_PIL(\"pinn_cd.gif\", files, fps=20, loop=0)"
+    "save_gif_PIL(\"cd_pinn.gif\", files, fps=20, loop=0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a1310f62",
+   "id": "e719df8d",
    "metadata": {},
    "source": [
-    "![SegmentLocal](pinn_cd.gif \"gif\")"
+    "![SegmentLocal](cd_pinn.gif \"gif\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "03119975",
+   "id": "3498b0f1",
    "metadata": {},
    "source": [
     "### Overdamped case\n",
@@ -691,8 +691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "7d8a1534",
+   "execution_count": 13,
+   "id": "7b311a91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a70ec1f8",
+   "id": "f7ecc601",
    "metadata": {},
    "source": [
     "Let's start by generating the data - Note that the critically damped and overdamped cases can be easily fitted with non-physics-informed NNs, therefore for this example we select a particularly limited range to be represented with the training data, so that we see the effect of the physics loss in action."
@@ -740,8 +740,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "55760ca8",
+   "execution_count": 14,
+   "id": "b225e28e",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e812655b",
+   "id": "d68f4e47",
    "metadata": {},
    "source": [
     "#### FCN\n",
@@ -794,14 +794,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "98b74f4e",
+   "execution_count": 15,
+   "id": "b4db5a1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.manual_seed(123)\n",
-    "model = FCN(1,1,32,3) # (n_in, n_out, n_hidden, n_layers)\n",
-    "optimizer = torch.optim.Adam(model.parameters(),lr=1e-3)\n",
+    "model = FCN(1,1,15,3) # (n_in, n_out, n_hidden, n_layers)\n",
+    "optimizer = torch.optim.Adam(model.parameters(),lr=1e-2)\n",
     "epochs = range(1, 501)\n",
     "losses = []\n",
     "files = []\n",
@@ -830,20 +830,20 @@
     "        #else: plt.close(\"all\")\n",
     "        plt.close(\"all\")    \n",
     "            \n",
-    "save_gif_PIL(\"nn_od.gif\", files, fps=20, loop=0)"
+    "save_gif_PIL(\"od_nn.gif\", files, fps=20, loop=0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ef2e745",
+   "id": "df780a19",
    "metadata": {},
    "source": [
-    "![SegmentLocal](nn_od.gif \"gif\")"
+    "![SegmentLocal](od_nn.gif \"gif\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a74753bf",
+   "id": "d6b38cfa",
    "metadata": {},
    "source": [
     "#### PINN\n",
@@ -852,8 +852,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "e3d74a37",
+   "execution_count": 16,
+   "id": "30490ce8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,19 +863,19 @@
     "mu, k = 2*d, w0**2\n",
     "\n",
     "torch.manual_seed(123)\n",
-    "model = FCN(1,1,32,3)\n",
+    "model = FCN(1,1,9,3)\n",
     "epochs = range(1, 20001)\n",
     "losses = []\n",
     "losses_data = []\n",
     "losses_physics = []\n",
-    "optimizer = torch.optim.Adam(model.parameters(),lr=5e-4)\n",
+    "optimizer = torch.optim.Adam(model.parameters(),lr=1e-3)\n",
     "files = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "5b0d564c",
+   "execution_count": 17,
+   "id": "c36dfcbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,15 +925,15 @@
     "        #else: plt.close(\"all\")\n",
     "        plt.close(\"all\")\n",
     "            \n",
-    "save_gif_PIL(\"pinn_od.gif\", files, fps=20, loop=0)"
+    "save_gif_PIL(\"od_pinn.gif\", files, fps=20, loop=0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f12cf4cf",
+   "id": "c119e662",
    "metadata": {},
    "source": [
-    "![SegmentLocal](pinn_od1.gif \"gif\")"
+    "![SegmentLocal](od_pinn.gif \"gif\")"
    ]
   }
  ],
